# zarr-python-memory-benchmark

./: .gitignore  README.md  main.py  pyproject.toml  sol.py
reports/: memray-flamegraph-read-compressed.html  memray-flamegraph-read-uncompressed.html  memray-flamegraph-sol-read-compressed.html  memray-flamegraph-sol-read-uncompressed.html  memray-flamegraph-write-compressed.html  memray-flamegraph-write-uncompressed.html
